trunk/Archive2/8a/6377eac0190b92/output
main.cpp:10:46: error: 'i' is a private member of 'Outer::Inner'
class C { static int const k = Outer::Inner::i; };
                                             ^
main.cpp:7:25: note: implicitly declared private here
       static int const i = 0;
                        ^
main.cpp:11:16: warning: unused variable 'i' [-Wunused-variable]
void f() { int i = Outer::Inner::i; }
               ^
1 warning and 1 error generated.
